# openbitdo

./: .gitignore  CHANGELOG.md  CNAME  LICENSE  MIGRATION.md  RC_CHECKLIST.md  README.md
.github/ISSUE_TEMPLATE/: dirtyroom-evidence.yml  hardware-report.yml  release-blocker.yml
.github/workflows/: aur-publish.yml  ci.yml  homebrew-publish.yml  release.yml
harness/golden/: mock_trace_get_mode.json  mock_trace_get_pid.json
harness/golden/jp108/: read_mapping_roundtrip.toml  write_mapping_apply.toml
harness/golden/ultimate2/: read_profile_slot.toml  write_profile_slot.toml
harness/lab/: device_lab.yaml
packaging/aur/: README.md
packaging/aur/openbitdo/: .SRCINFO  PKGBUILD  PKGBUILD.tmpl
packaging/aur/openbitdo-bin/: .SRCINFO  PKGBUILD  PKGBUILD.tmpl
packaging/homebrew/: README.md  sync_tap.sh  test_sync_tap.sh
packaging/homebrew/Formula/: openbitdo.rb  openbitdo.rb.tmpl
packaging/scripts/: render_release_metadata.sh  test_render_release_metadata.sh
process/: add_device_guide.md  aur_publish_troubleshooting.md  branch_policy.md  cleanroom_rules.md  commenting_standard.md  community_evidence_intake.md  device_name_sources.md  dirtyroom_collection_playbook.md  dirtyroom_dossier_schema.md  dirtyroom_evidence_backlog.md  release_scope_gate.toml  wave1_baseline.md  wave1_results.md  wave2_baseline.md  wave2_pid_scorecard.md  wave2_results.md  wave2_runtime_intake.md
sdk/: Cargo.toml  README.md
sdk/crates/bitdo_app_core/: Cargo.toml
sdk/crates/bitdo_app_core/src/: lib.rs
sdk/crates/bitdo_proto/: Cargo.toml  build.rs
sdk/crates/bitdo_proto/src/: command.rs  command_registry_table.rs  error.rs  frame.rs  hid_transport.rs  lib.rs  pid_registry_table.rs  profile.rs  registry.rs  session.rs  transport.rs  types.rs
sdk/crates/bitdo_tui/: Cargo.toml
sdk/crates/bitdo_tui/src/: desktop_io.rs  lib.rs  settings.rs  support_report.rs  tests.rs
sdk/crates/bitdo_tui/src/app/: action.rs  effect.rs  event.rs  mod.rs  reducer.rs  state.rs
sdk/crates/bitdo_tui/src/headless/: mod.rs
sdk/crates/bitdo_tui/src/persistence/: ui_state.rs
sdk/crates/bitdo_tui/src/runtime/: effect_executor.rs  loop.rs  mod.rs
sdk/crates/bitdo_tui/src/snapshots/: bitdo_tui__tests__snapshot_dashboard_80x24.snap  bitdo_tui__tests__snapshot_diagnostics_screen_100x30.snap  bitdo_tui__tests__snapshot_diagnostics_screen_80x24.snap  bitdo_tui__tests__snapshot_diagnostics_screen_with_saved_report.snap  bitdo_tui__tests__snapshot_mapping_editor_screen.snap  bitdo_tui__tests__snapshot_recovery_screen.snap  bitdo_tui__tests__snapshot_task_screen_100x30.snap
sdk/crates/bitdo_tui/src/ui/: layout.rs  theme.rs
sdk/crates/bitdo_tui/src/ui/screens/: dashboard.rs  diagnostics.rs  mapping_editor.rs  mod.rs  recovery.rs  settings.rs  task.rs
sdk/crates/bitdoctl/: Cargo.toml
sdk/crates/bitdoctl/src/: main.rs
sdk/crates/openbitdo/: Cargo.toml  build.rs
sdk/crates/openbitdo/src/: lib.rs  main.rs
sdk/crates/openbitdo/tests/: cli_smoke.rs
sdk/scripts/: check_docs_consistency.sh  check_evidence_readiness.py  cleanroom_guard.sh  package-linux.sh  package-macos.sh  run_hardware_smoke.sh
sdk/tests/: alias_index_integrity.rs  boot_safety.rs  candidate_readonly_gating.rs  capability_gating.rs  cleanroom_guard.rs  cli_snapshot.rs  command_matrix_coverage.rs  diag_probe.rs  error_codes.rs  firmware_chunk.rs  frame_roundtrip.rs  hardware_smoke.rs  mode_switch_readback.rs  parser_rejection.rs  pid_matrix_coverage.rs  pid_registry_unique.rs  profile_serialization.rs  retry_timeout.rs  runtime_policy.rs
spec/: alias_index.md  command_matrix.csv  device_name_catalog.md  evidence_index.csv  pid_matrix.csv  protocol_spec.md  requirements.yaml
spec/dossiers/2028/: core_diag.toml  firmware.toml
spec/dossiers/202e/: core_diag.toml  firmware.toml
spec/dossiers/2039/: core_diag.toml
spec/dossiers/203a/: core_diag.toml  firmware.toml
spec/dossiers/2049/: core_diag.toml  firmware.toml
spec/dossiers/2056/: core_diag.toml
spec/dossiers/2100/: core_diag.toml  firmware_preflight.toml  mode_or_profile_read.toml
spec/dossiers/2101/: core_diag.toml  firmware_preflight.toml  mode_or_profile_read.toml
spec/dossiers/3004/: core_diag.toml  firmware.toml
spec/dossiers/3010/: core_diag.toml  firmware.toml
spec/dossiers/3011/: core_diag.toml  firmware.toml
spec/dossiers/3012/: core_diag.toml  firmware.toml
spec/dossiers/3013/: core_diag.toml  firmware.toml
spec/dossiers/3019/: core_diag.toml  firmware.toml
spec/dossiers/301a/: core_diag.toml  firmware_preflight.toml  mode_or_profile_read.toml
spec/dossiers/3021/: core_diag.toml
spec/dossiers/3026/: core_diag.toml  firmware_preflight.toml  mode_or_profile_read.toml
spec/dossiers/3027/: core_diag.toml  firmware_preflight.toml  mode_or_profile_read.toml
spec/dossiers/3100/: core_diag.toml  firmware_preflight.toml  mode_or_profile_read.toml
spec/dossiers/3105/: core_diag.toml  firmware_preflight.toml  mode_or_profile_read.toml
spec/dossiers/5200/: core_diag.toml  firmware.toml
spec/dossiers/5201/: core_diag.toml  firmware.toml
spec/dossiers/5203/: core_diag.toml  firmware_preflight.toml  mode_or_profile_read.toml
spec/dossiers/5204/: core_diag.toml  firmware_preflight.toml  mode_or_profile_read.toml
spec/dossiers/5205/: core_diag.toml
spec/dossiers/5206/: core_diag.toml
spec/dossiers/5209/: firmware_core.toml  jp108_dedicated.toml
spec/dossiers/6002/: core_diag.toml  firmware.toml
spec/dossiers/6003/: core_diag.toml  firmware.toml
spec/dossiers/6006/: core_diag.toml  firmware_preflight.toml  mode_or_profile_read.toml
spec/dossiers/6012/: firmware_core.toml  u2_core.toml
spec/dossiers/901a/: core_diag.toml  firmware_preflight.toml  mode_or_profile_read.toml
spec/dossiers/9028/: core_diag.toml  firmware_preflight.toml  mode_or_profile_read.toml
spec/dossiers/global/: core.toml
