[workspace]
members = [
  "crates/bitdo_proto",
  "crates/bitdo_app_core",
  "crates/bitdo_tui",
  "crates/openbitdo",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.1-rc.2"
license = "BSD-3-Clause"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "net", "io-util"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
sha2 = "0.10"
ratatui = "0.29"
crossterm = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
fuzzy-matcher = "0.3"
unicode-width = "0.2"
insta = "1.43"
