[package]
name = "bitdo_app_core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "BSD-3-Clause"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
bitdo_proto = { path = "../bitdo_proto" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
