[package]
name = "bitdo_proto"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[features]
default = ["hidapi-backend"]
hidapi-backend = ["dep:hidapi"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
hidapi = { version = "2.6", optional = true }

[dev-dependencies]
serde_json = { workspace = true }
hex = { workspace = true }

[[test]]
name = "frame_roundtrip"
path = "../../tests/frame_roundtrip.rs"

[[test]]
name = "parser_rejection"
path = "../../tests/parser_rejection.rs"

[[test]]
name = "retry_timeout"
path = "../../tests/retry_timeout.rs"

[[test]]
name = "pid_matrix_coverage"
path = "../../tests/pid_matrix_coverage.rs"

[[test]]
name = "command_matrix_coverage"
path = "../../tests/command_matrix_coverage.rs"

[[test]]
name = "capability_gating"
path = "../../tests/capability_gating.rs"

[[test]]
name = "candidate_readonly_gating"
path = "../../tests/candidate_readonly_gating.rs"

[[test]]
name = "profile_serialization"
path = "../../tests/profile_serialization.rs"

[[test]]
name = "mode_switch_readback"
path = "../../tests/mode_switch_readback.rs"

[[test]]
name = "boot_safety"
path = "../../tests/boot_safety.rs"

[[test]]
name = "firmware_chunk"
path = "../../tests/firmware_chunk.rs"

[[test]]
name = "cleanroom_guard"
path = "../../tests/cleanroom_guard.rs"

[[test]]
name = "hardware_smoke"
path = "../../tests/hardware_smoke.rs"

[[test]]
name = "error_codes"
path = "../../tests/error_codes.rs"

[[test]]
name = "diag_probe"
path = "../../tests/diag_probe.rs"

[[test]]
name = "runtime_policy"
path = "../../tests/runtime_policy.rs"
