[package]
name = "bitdo_tui"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "BSD-3-Clause"

[dependencies]
anyhow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
fuzzy-matcher = { workspace = true }
unicode-width = { workspace = true }
bitdo_proto = { path = "../bitdo_proto" }
bitdo_app_core = { path = "../bitdo_app_core" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
insta = { workspace = true }
