[package]
name = "bitdoctl"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
bitdo_proto = { path = "../bitdo_proto" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[[test]]
name = "cli_snapshot"
path = "../../tests/cli_snapshot.rs"
