[package]
name = "openbitdo"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "BSD-3-Clause"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bitdo_app_core = { path = "../bitdo_app_core" }
bitdo_tui = { path = "../bitdo_tui" }
bitdo_proto = { path = "../bitdo_proto" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
